--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,19 @@ dependencies:
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
   get: ^3.4.6
+  get_it: ^4.0.2
   flutter_svg: ^0.19.1
+  dio: ^3.0.9
+  mobx: ^1.2.1
+  flutter_mobx: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mobx_codegen: ^1.1.0
+  build_runner: ^1.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
