--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   mobx: ^1.2.1
   flutter_mobx: ^1.1.0
   crypto: ^2.1.4
+  flutter_material_pickers: ^1.8.0
 
 dev_dependencies:
   flutter_test:
